Add a quirk for the WDC Green series of SSDs to disable NCQ TRIM, as this avoids silent data corruption.

PR:             225666
Submitted by:   anders lundgren